IPOBBApplication created with AppList from a RestDataSource; gwtc localWorkers set to 2; bidsession datasource and schema created

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ IPOBookBuildingApp.war
 .classpath
 war/WEB-INF/classes/**/*.xml
 gwt-unitCache/**
+war/WEB-INF/db
+war/WEB-INF/lib
+war/WEB-INF/classes
+war/WEB-INF/deploy
+war/builtinds/*.js
+war/builtinds/sc/skins/Tahoe
+war/WEB-INF/deploy/builtinds/symbolMaps
