--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
     <mkdir dir="war/WEB-INF/classes"/>
     <javac srcdir="src" includes="**" encoding="utf-8"
         destdir="war/WEB-INF/classes"
-        source="1.5" target="1.5" nowarn="true"
+        source="1.8" target="1.8" nowarn="true"
         debug="true" debuglevel="lines,vars,source">
       <classpath refid="project.class.path"/>
     </javac>
@@ -50,10 +50,12 @@
       </classpath>
       <!-- add jvmarg -Xss16M or similar if you see a StackOverflowError -->
       <jvmarg value="-Xmx1G"/>
+	  <arg value="-localWorkers" />
+      <arg value="2" />
       <!-- Additional arguments like -style DETAILED or -logLevel DEBUG -->
       <!-- <arg line="-optimize 0"  /> -->
       <!-- <arg line="-style PRETTY"/> -->
-      <arg value="com.smartgwt.sample.BuiltInDS"/>
+      <arg value="com.smartgwt.sample.BuiltInDS"/>      
     </java>
   </target>
 
