--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 gwt-unitCache/gwt-unitCache-72cb1b634ef8ae81083ee3d69c942d236fe6aafe-FF35F588CF7564DE259004F02565B00E-00000171F4560F2F
-IPOBookBuildingApp.war
+*.war
 .project
 .classpath
-war/WEB-INF/classes/**/*.xml
-gwt-unitCache/**
-war/WEB-INF/db
-war/WEB-INF/lib
-war/WEB-INF/classes
-war/WEB-INF/deploy
-war/builtinds/*.js
-war/builtinds/sc/skins/Tahoe
-war/WEB-INF/deploy/builtinds/symbolMaps
+portal/war/WEB-INF/classes
+portal/gwt-unitCache/**
+portal/war/WEB-INF/db
+portal/war/WEB-INF/lib
+portal/war/WEB-INF/deploy
+portal/war/builtinds/sc
+.settings
