cleaning up java files for a clean build

--- a/portal/war/WEB-INF/web.xml
+++ b/portal/war/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     
      <servlet>
 	     <servlet-name>CustomAfterInitServlet</servlet-name>
-	     <servlet-class>com.smartgwt.sample.server.servlet.CustomAfterInitServlet</servlet-class>
+	     <servlet-class>com.vidhansu.sample.server.servlet.CustomAfterInitServlet</servlet-class>
 	     <load-on-startup>2</load-on-startup>
  	 </servlet>
     <!-- Dynamic Compression -->
