Activities Places History - Initial commit

--- a/portal/src/main/java/server.properties
+++ b/portal/src/main/java/server.properties
@@ -26,8 +26,8 @@
 #     the servlet APIs provide no mechanism for writing to disk, means that some
 #     development tools like the FileAssembler will not work.
 #
-#webRoot:__AUTODETECT__
-webRoot: /Users/anand/WF/smartgwtee-12.1p/samples/IPOBookBuildingApp/war
+webRoot:__AUTODETECT__
+#webRoot: /Users/anand/mybundles/smartgwtee-12.1p/samples/IPOBookBuildingApp/portal/war
 
 
 # Set this to the GWT module name.
